Update and created script dotfiles

--- a/i3/config
+++ b/i3/config
@@ -23,7 +23,7 @@ bindsym $win+f exec "urxvt -e ranger"
 bindsym $win+n exec "urxvt -e newsbeuter -r"
 bindsym $win+e exec "setxkbmap es"
 bindsym $win+u exec "setxkbmap us"
-bindsym $win+c exec "setxkbmap custom"
+bindsym $win+c exec "xmodmap ~/.Xmodmap > ~/out"
 bindsym $win+p exec "systemctl poweroff"
 bindsym $win+Down  exec "amixer set Master 1%-"
 bindsym $win+Up exec "amixer set Master 1%+"
