--- a/i3/config
+++ b/i3/config
@@ -10,32 +10,45 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod1
-
-############
-# PERSONAL #
-############
-for_window [instance="sun-awt-X11-XFramePeer"] floating enable
-exec "~/.i3/start"
 set $win Mod4
+
+exec "~/.i3/start"
+
 focus_follows_mouse no
-bindsym $win+i exec google-chrome
+
+new_window pixel 2
+ 
+client.focused          #80A070 #606F50 #EEEEEE #374727
+client.focused_inactive #333333 #5F676A #EEEEEE #374727
+ 
+bindsym $win+i exec firefox
 bindsym $win+r exec rhythmbox
-bindsym $win+f exec "urxvt -e ranger"
-bindsym $win+n exec "urxvt -e newsbeuter -r"
-bindsym $win+e exec "setxkbmap es"
-bindsym $win+u exec "setxkbmap us"
-bindsym $win+c exec "xmodmap ~/.Xmodmap > ~/out"
-bindsym $win+p exec "systemctl poweroff"
-bindsym $win+Down  exec "amixer set Master 1%-"
-bindsym $win+Up exec "amixer set Master 1%+"
-bindsym $win+m exec "amixer set Master toggle"
+bindsym $win+f exec urxvt -e ranger
+bindsym $win+n exec urxvt -title RSS -g 65x15 -e newsbeuter -r
+bindsym $win+e exec setxkbmap es
+bindsym $win+u exec setxkbmap us
+bindsym $win+c exec xmodmap ~/.Xmodmap
+bindsym $win+p exec systemctl poweroff
+bindsym $win+Up exec amixer set Master 1%+
+bindsym $win+Down exec amixer set Master 1%-
 bindsym Print exec scrot
+
 assign [class="Firefox"] 2
-assign [class="Google-chrome"] 2
-assign [class="Choqok"] 1
-assign [title="RSS"] 1
-assign [class="Rhythmbox"] 5
 assign [class="Qbittorrent"] 5
+assign [class="Rhythmbox"] 5
+assign [class="Pidgin"] 3
+assign [class="Skype"] 3
+assign [class="urpial"] 3
+assign [title="RSS"] 3
+
+for_window [class="Skype"] floating enable
+for_window [class="Evince"] floating enable
+for_window [class="Pidgin"] floating enable
+for_window [class="Turpial"] floating enable
+for_window [instance="sun-awt-X11-XFramePeer"] floating enable
+for_window [title="RSS"] floating enable
+for_window [title="ranger"] floating enable
+
 workspace 1 output HDMI-0
 workspace 3 output HDMI-0
 workspace 5 output HDMI-0
@@ -48,9 +61,7 @@ workspace 8 output VGA-0
 workspace 10 output VGA-0
 
 # font for window titles. ISO 10646 = Unicode
-#font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-#font -schumacher-clean-bold-r-normal--16-160-75-75-c-80-iso646.1991-irv
-font xft:Monaco:size=11
+font xft:DejaVu Sans Mono 12
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -70,23 +81,11 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+H move left
 bindsym $mod+Shift+J move down
 bindsym $mod+Shift+K move up
 bindsym $mod+Shift+L move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+b split h
@@ -98,7 +97,6 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, default)
-# bindsym $mod+s layout stacking # comentat perque no l'utilitzo i incompatible amb guardar a vim
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout default
 
@@ -131,16 +129,23 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
-#
+
 # reload the configuration file
 bindsym $mod+Shift+C reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+R restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+E exit
-#
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
   status_command conky
+  font xft:DejaVu Sans Mono 12
+  colors {
+    focused_workspace  #80A070 #606F50 #EEEEEE
+    active_workspace   #333333 #5f676a #EEEEEE
+    inactive_workspace #333333 #5F676A #EEEEEE
+    urgent_workspace   #2f343a #900000 #EEEEEE
+  }
 }
