--- a/i3/config
+++ b/i3/config
@@ -43,7 +43,13 @@ assign [title="RSS"] 3
 
 for_window [class="Skype"] floating enable
 for_window [class="Evince"] floating enable
+for_window [class="feh"] floating enable
+for_window [class="MPlayer"] floating enable
 for_window [class="Pidgin"] floating enable
+for_window [class="python2.7"] floating enable
+for_window [class="Ristretto"] floating enable
+for_window [class="Steam"] floating enable
+for_window [class="Thunar"] floating enable
 for_window [class="Turpial"] floating enable
 for_window [instance="sun-awt-X11-XFramePeer"] floating enable
 for_window [title="RSS"] floating enable
