--- a/i3/config
+++ b/i3/config
@@ -23,8 +23,9 @@ client.focused_inactive #333333 #5F676A #EEEEEE #374727
  
 bindsym $win+i exec firefox
 bindsym $win+r exec rhythmbox
-bindsym $win+f exec urxvt -e ranger
-bindsym $win+n exec urxvt -title RSS -g 65x25 -e newsbeuter -r
+bindsym $win+m exec urxvt -title Vimpc -e /usr/bin/vimpc
+bindsym $win+f exec urxvt -title ranger -e python3 /usr/bin/ranger
+bindsym $win+n exec urxvt -title RSS -g 65x25 -e newsbeuter
 bindsym $win+e exec setxkbmap es
 bindsym $win+u exec setxkbmap us
 bindsym $win+c exec xmodmap ~/.Xmodmap
@@ -36,24 +37,28 @@ bindsym Print exec scrot
 assign [class="Firefox"] 2
 assign [class="Qbittorrent"] 5
 assign [class="Rhythmbox"] 5
+assign [title="Vimpc"] 3
 assign [class="Pidgin"] 3
 assign [class="Skype"] 3
+assign [class="Steam"] 3
 assign [class="urpial"] 3
 assign [title="RSS"] 3
 
-for_window [class="Skype"] floating enable
 for_window [class="Evince"] floating enable
-for_window [class="feh"] floating enable
 for_window [class="GoL"] floating enable
 for_window [class="MPlayer"] floating enable
 for_window [class="Pidgin"] floating enable
-for_window [class="python2.7"] floating enable
 for_window [class="Ristretto"] floating enable
+for_window [class="Skype"] floating enable
 for_window [class="Steam"] floating enable
 for_window [class="Thunar"] floating enable
 for_window [class="Turpial"] floating enable
+for_window [class="Xpdf"] floating enable
+for_window [class="feh"] floating enable
+for_window [class="python2.7"] floating enable
 for_window [instance="sun-awt-X11-XFramePeer"] floating enable
 for_window [title="RSS"] floating enable
+for_window [title="Vimpc"] floating enable
 for_window [title="ranger"] floating enable
 
 workspace 1 output HDMI-0
