--- a/i3/config
+++ b/i3/config
@@ -12,24 +12,14 @@
 set $mod Mod1
 set $win Mod4
 
-# set wallpaper
-exec --no-startup-id feh --bg-scale ~/Pictures/Wallpapers/ISS.jpg
-# set keymap mod
-exec --no-startup-id xmodmap ~/dotfiles/Xmodmap
-# set resources
-exec --no-startup-id xrdb ~/.Xresources
-# open apps
-exec --no-startup-id i3-msg 'workspace 1; exec firefox; workspace 1'
-# start urxvt on workspace 2
-exec --no-startup-id i3-msg 'workspace 2; exec urxvt; workspace 1'
-exec --no-startup-id urxvt -title RSS -e newsbeuter
+exec ~/.i3/start
 
 focus_follows_mouse no
 
 new_window pixel 2
  
-client.focused          #EEEEEE #DDDDDD #111111 #AAAAAA
-client.focused_inactive #AAAAAA #000000 #AAAAAA #999999
+client.focused          #EEEEEE #AAAAAA #111111 #AAAAAA
+client.focused_inactive #AAAAAA #111111 #AAAAAA #999999
  
 bindsym $win+i exec firefox
 bindsym $win+r exec rhythmbox
@@ -65,11 +55,6 @@ for_window [class="Thunar"] floating enable
 for_window [class="Turpial"] floating enable
 for_window [class="Xpdf"] floating enable
 for_window [class="feh"] floating enable
-for_window [class="python2.7"] floating enable
-for_window [instance="sun-awt-X11-XFramePeer"] floating enable
-for_window [title="RSS"] floating enable
-for_window [title="Vimpc"] floating enable
-for_window [title="ranger"] floating enable
 
 workspace 1 output HDMI-0
 workspace 3 output HDMI-0
@@ -95,7 +80,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+Q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -162,7 +147,7 @@ bindsym $mod+Shift+E exit
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command conky
+  status_command i3status -c ~/.i3/status
   font xft:DejaVu Sans Mono 12
   colors {
     focused_workspace  #000000 #000000 #EEEEEE
