--- a/.gitmodules
+++ b/.gitmodules
@@ -1,44 +1,3 @@
-[submodule "vim/bundle/Airline"]
-	path = vim/bundle/Airline
-	url = https://github.com/bling/vim-airline
-  ignore = dirty
-[submodule "vim/bundle/MultipleCursors"]
-	path = vim/bundle/MultipleCursors
-	url = https://github.com/terryma/vim-multiple-cursors
-  ignore = dirty
-[submodule "vim/bundle/QuickBuf"]
-	path = vim/bundle/QuickBuf
-	url = https://github.com/vim-scripts/QuickBuf
-  ignore = dirty
-[submodule "vim/bundle/NERDtree"]
-	path = vim/bundle/NERDtree
-	url = https://github.com/vim-scripts/The-NERD-tree
-  ignore = dirty
-[submodule "vim/bundle/CtrlP"]
-	path = vim/bundle/CtrlP
-	url = https://github.com/vim-scripts/ctrlp.vim
-  ignore = dirty
-[submodule "vim/bundle/MatchIt"]
-	path = vim/bundle/MatchIt
-	url = https://github.com/vim-scripts/matchit.zip
-  ignore = dirty
-[submodule "vim/bundle/tComment"]
-	path = vim/bundle/tComment
-	url = https://github.com/vim-scripts/tComment
-  ignore = dirty
-[submodule "vim/bundle/TagList"]
-	path = vim/bundle/TagList
-	url = https://github.com/vim-scripts/taglist.vim
-  ignore = dirty
-[submodule "vim/bundle/fugitive"]
-	path = vim/bundle/fugitive
-	url = https://github.com/tpope/vim-fugitive
-[submodule "vim/bundle/tlib"]
-	path = vim/bundle/tlib
-	url = https://github.com/tomtom/tlib_vim.git
-[submodule "vim/bundle/vim-addon-mw-utils"]
-	path = vim/bundle/vim-addon-mw-utils
-	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
-[submodule "vim/bundle/SnipMate"]
-	path = vim/bundle/SnipMate
-	url = https://github.com/garbas/vim-snipmate.git
+[submodule "vim/bundle/vundle"]
+	path = vim/bundle/vundle
+	url = https://github.com/gmarik/vundle
