--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "vim/bundle/lucius"]
 	path = vim/bundle/lucius
 	url = https://github.com/jonathanfilip/vim-lucius
-[submodule "vim/bundle/airline"]
-	path = vim/bundle/airline
-	url = https://github.com/bling/vim-airline
 [submodule "vim/bundle/quickbuf"]
 	path = vim/bundle/quickbuf
 	url = https://github.com/tek/vim-quickbuf
@@ -19,3 +16,6 @@
 [submodule "vim/bundle/ctrlp"]
 	path = vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim
+[submodule "vim/bundle/lightline"]
+	path = vim/bundle/lightline
+	url = https://github.com/itchyny/lightline.vim
