--- a/i3/config
+++ b/i3/config
@@ -48,16 +48,16 @@ for_window [class="Steam"] floating enable
 for_window [class="Thunar"] floating enable
 for_window [class="feh"] floating enable
 
-workspace 1 output HDMI-0
-workspace 3 output HDMI-0
-workspace 5 output HDMI-0
-workspace 7 output HDMI-0
-workspace 9 output HDMI-0
-workspace 2 output VGA-0
-workspace 4 output VGA-0
-workspace 6 output VGA-0
-workspace 8 output VGA-0
-workspace 10 output VGA-0
+# workspace 1 output HDMI-0
+# workspace 3 output HDMI-0
+# workspace 5 output HDMI-0
+# workspace 7 output HDMI-0
+# workspace 9 output HDMI-0
+# workspace 2 output VGA-0
+# workspace 4 output VGA-0
+# workspace 6 output VGA-0
+# workspace 8 output VGA-0
+# workspace 10 output VGA-0
 
 # font for window titles. ISO 10646 = Unicode
 font xft:DejaVu Sans Mono 12
