--- a/i3/config
+++ b/i3/config
@@ -11,7 +11,7 @@
 
 floating_modifier $mod
 focus_follows_mouse no
-font xft:DejaVu Sans Mono 12
+font xft:Inconsolata 12
 new_window pixel 3
 set $mod Mod1
 
@@ -100,7 +100,7 @@ bindsym $mod+Shift+R restart
 # finds out, if available)
 bar {
   status_command i3status -c ~/.i3/status
-  font xft:DejaVu Sans Mono 12
+  font xft:Inconsolata 12
   mode hide
   hidden_state hide
   modifier Mod4
