--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-exec ~/bin/start
+exec --no-startup-id ~/bin/start
 
 floating_modifier $mod
 focus_follows_mouse no
