--- a/i3/config
+++ b/i3/config
@@ -96,7 +96,7 @@ bindsym $mod+Shift+R restart
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command i3status -c ~/.i3/status
+  status_command conky
   font xft:Monospace 9
   mode hide
   hidden_state hide
