--- a/i3/config
+++ b/i3/config
@@ -23,7 +23,11 @@ client.focused_inactive #AAAAAA #111111 #AAAAAA #999999
 assign [class="transmission"] 5
 assign [class="Skype"] 3
 assign [class="Steam"] 3
+assign [class="Vmplayer"] 10
 
+for_window [title="^IDI*"] floating enable
+for_window [title="PANIC"] floating enable
+for_window [class="Bochs"] floating enable
 for_window [class="MPlayer"] floating enable
 for_window [class="Skype"] floating enable
 for_window [class="Steam"] floating enable
