--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -276,7 +276,7 @@ map gl cd -r .
 map gL cd -r %f
 map go cd /opt
 map gv cd /var
-map gm cd /media
+map gm cd /run/media/ferran
 map gM cd /mnt
 map gs cd /srv
 map gr cd /
@@ -327,7 +327,7 @@ map yj  eval fm.copy(dirarg=dict(down=1), narg=quantifier)
 map yk  eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 
 # Searching
-map /  console search
+map /  console search 
 map n  search_next
 map N  search_next forward=False
 map ct search_next order=tag
