--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim
     ignore = dirty
+[submodule "vim/bundle/fugitive"]
+	path = vim/bundle/fugitive
+	url = https://github.com/tpope/vim-fugitive
