ktorrent in 5 workspace

--- a/i3/config
+++ b/i3/config
@@ -21,6 +21,7 @@ client.focused          #999999 #afd700 #111111 #afd700
 client.focused_inactive #AAAAAA #111111 #AAAAAA #999999
 
 assign [class="transmission"] 5
+assign [class="torrent"] 5
 assign [class="Skype"] 3
 assign [class="Steam"] 3
 assign [class="Vmplayer"] 10
