--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 	path = vim/bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive
 	ignore = dirty
+[submodule "vim/bundle/incsearch"]
+	path = vim/bundle/incsearch
+	url = https://github.com/haya14busa/incsearch.vim
+	ignore = dirty
