--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,6 @@
 	path = vim/bundle/incsearch
 	url = https://github.com/haya14busa/incsearch.vim
 	ignore = dirty
+[submodule "vim/bundle/tmux-navigator"]
+	path = vim/bundle/tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator
