tmux: enter command prompt like in vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -56,6 +56,12 @@ bind ^J select-pane -t :.+
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# Switch ; and : like in vim
+unbind \;
+unbind :
+bind \; command-prompt
+bind : last-pane
+
 ###########################
 # Status Bar
 ###########################
