tmux: resize bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,6 +62,11 @@ unbind :
 bind \; command-prompt
 bind : last-pane
 
+bind h resize-pane -L 2
+bind j resize-pane -D 2
+bind k resize-pane -U 2
+bind l resize-pane -R 2
+
 ###########################
 # Status Bar
 ###########################
