--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,6 @@ setw -g pane-base-index 1
 # re-number windows when one is closed
 set -g renumber-windows on
 
-
 ###########################
 #  Key Bindings
 ###########################
@@ -38,8 +37,10 @@ bind C-p paste-buffer
 
 # window splitting
 unbind %
+unbind |
 bind | split-window -h
 unbind '"'
+unbind -
 bind - split-window -v
 
 # quickly switch panes
@@ -77,15 +78,10 @@ set -g status-utf8 on
 set -g status-interval 30
 
 # center the status bar
-set -g status-justify left
+set -g status-justify centre
 
-# show session, window, pane in left status bar
-set -g status-left-length 40
-set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
-
-# show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
- #[fg=red]#(battery discharging)#[default]#(battery charging)'
+set-option -g status-left '#H'
+set-option -g status-right '%m/%d/%y %I:%M'
 
 ###########################
 # Colors
@@ -97,7 +93,7 @@ set -g status-fg white
 
 # highlight current window
 set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-bg colour187
 
 # set color of active pane
 set -g pane-border-fg white
