--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,3 @@
-[submodule "vim/bundle/pathogen"]
-	path = vim/bundle/pathogen
-	url = https://github.com/tpope/vim-pathogen
-	ignore = dirty
-[submodule "vim/bundle/ctrlp"]
-	path = vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim
-	ignore = dirty
-[submodule "vim/bundle/ultisnips"]
-	path = vim/bundle/ultisnips
-	url = https://github.com/vim-scripts/UltiSnips
-	ignore = dirty
-[submodule "vim/bundle/tcomment"]
-	path = vim/bundle/tcomment
-	url = https://github.com/tomtom/tcomment_vim
-	ignore = dirty
-[submodule "vim/bundle/vis"]
-	path = vim/bundle/vis
-	url = https://github.com/taku-o/vim-vis
-	ignore = dirty
-[submodule "vim/bundle/fugitive"]
-	path = vim/bundle/fugitive
-	url = http://github.com/tpope/vim-fugitive
-	ignore = dirty
-[submodule "vim/bundle/gutentags"]
-	path = vim/bundle/gutentags
-	url = https://github.com/ludovicchabant/vim-gutentags
-[submodule "vim/bundle/dispatch"]
-	path = vim/bundle/dispatch
-	url = http://github.com/tpope/vim-dispatch
+[submodule "vim/bundle/Vundle.vim"]
+	path = vim/bundle/Vundle.vim
+	url = https://github.com/gmarik/Vundle.vim
