--- a/tmux.conf
+++ b/tmux.conf
@@ -1,59 +1,35 @@
 ###########################
 #  Configuration
 ###########################
-
-# use 256 term for pretty colors
 set -g default-terminal "screen-256color"
-
-# use vim key bindings
-setw -g mode-keys vi
-
-# decrease command delay (increases vim responsiveness)
+set -g mode-keys vi
 set -sg escape-time 1
-
-# start window index at 1
 set -g base-index 1
 
-# start pane index at 1
-setw -g pane-base-index 1
-
-# re-number windows when one is closed
+set -g pane-base-index 1
 set -g renumber-windows on
+
+set -g status-keys "emacs"
 
 ###########################
 #  Key Bindings
 ###########################
 
-# tmux prefix
-unbind C-b
 set -g prefix C-g
 
-# create 'v' alias for selecting text
 bind-key -t vi-copy v begin-selection
 
-# paste
-unbind C-p
 bind C-p paste-buffer
 
-# window splitting
-unbind %
-unbind |
-bind | split-window -h
-unbind '"'
-unbind -
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
-# quickly switch panes
-unbind ^J
+bind c new-window -c '#{pane_current_path}'
+
 bind ^J select-pane -t :.+
 
-# force a reload of the config file
-unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Switch ; and : like in vim
-unbind \;
-unbind :
 bind \; command-prompt
 bind : last-pane
 
@@ -71,31 +47,22 @@ bind L resize-pane -R 5
 # Status Bar
 ###########################
 
-# enable UTF-8 support in status bar
 set -g status-utf8 on
-
-# set refresh interval for status bar
 set -g status-interval 30
-
-# center the status bar
 set -g status-justify centre
-
 set-option -g status-left '#H'
-set-option -g status-right '%m/%d/%y %I:%M'
+set -g status-right '%m/%d/%y %I:%M'
 
 ###########################
 # Colors
 ###########################
 
-# color status bar
 set -g status-bg colour239
 set -g status-fg white
 
-# highlight current window
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg colour187
 
-# set color of active pane
 set -g pane-border-fg white
 set -g pane-border-bg black
 set -g pane-active-border-fg green
