--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 #  Configuration
 ###########################
 set -g default-terminal "screen-256color"
+set -g utf8 on
 set -g mode-keys vi
 set -sg escape-time 1
 set -g base-index 1
@@ -49,7 +50,6 @@ bind L resize-pane -R 10
 # Status Bar
 ###########################
 
-set -g status-utf8 on
 set -g status-interval 30
 set -g status-justify centre
 set-option -g status-left '#H'
