tmux: use nice time format

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,7 @@ bind L resize-pane -R 10
 set -g status-interval 30
 set -g status-justify centre
 set-option -g status-left '#H'
-set -g status-right '%m/%d/%y %I:%M'
+set -g status-right '%Y.%m.%d %H:%M'
 
 ###########################
 # Colors
