tmux: color messages

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,4 +68,5 @@ set-window-option -g window-status-current-bg colour187
 set -g pane-border-fg white
 set -g pane-border-bg black
 set -g pane-active-border-fg green
-set -g pane-active-border-bg black
+set -g message-fg black
+set -g message-bg green
