--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -sg escape-time 1
 set -g base-index 1
 
 set -g pane-base-index 1
-set -g renumber-windows on
+set -g renumber-windows off
 
 set -g status-keys "emacs"
 
