tmux: detach on destroy off

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,8 @@ set -g renumber-windows off
 
 set -g status-keys "emacs"
 
+set -g detach-on-destroy off
+
 ###########################
 #  Key Bindings
 ###########################
@@ -52,7 +54,7 @@ bind L resize-pane -R 10
 
 set -g status-interval 30
 set -g status-justify centre
-set-option -g status-left '#H'
+set -g status-left '#H'
 set -g status-right '%Y.%m.%d %H:%M'
 
 ###########################
