tmux: better status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,8 @@ set -g status-keys "emacs"
 
 set -g detach-on-destroy off
 
+set -g focus-events on
+
 ###########################
 #  Key Bindings
 ###########################
@@ -53,9 +55,11 @@ bind L resize-pane -R 10
 ###########################
 
 set -g status-interval 30
-set -g status-justify centre
-set -g status-left '#H'
-set -g status-right '%Y.%m.%d %H:%M'
+set -g status-justify left
+set -g status-left-length 0
+set -g status-left ''
+set -g status-right-length 100
+set -g status-right '#S - %Y.%m.%d %H:%M'
 
 ###########################
 # Colors
