Update scripts and configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,6 @@
 #  Configuration
 ###########################
 set -g default-terminal "screen-256color"
-set -g utf8 on
 set -g mode-keys vi
 set -sg escape-time 1
 set -g base-index 1
@@ -23,6 +22,7 @@ set -g focus-events on
 set -g prefix C-g
 
 bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy enter copy-pipe 'xclip -selection clipboard >/dev/null'
 
 bind C-p paste-buffer
 
@@ -65,14 +65,14 @@ set -g status-right '#S - %Y.%m.%d %H:%M'
 # Colors
 ###########################
 
-set -g status-bg colour239
+set -g status-bg black
 set -g status-fg white
 
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg colour187
+# set-window-option -g window-status-current-fg black
+# set-window-option -g window-status-current-bg white
 
-set -g pane-border-fg white
-set -g pane-border-bg black
-set -g pane-active-border-fg green
+# set -g pane-border-fg white
+# set -g pane-border-bg white
+# set -g pane-active-border-fg white
 set -g message-fg black
-set -g message-bg green
+set -g message-bg white
