st: vim: tmux: update colors and style

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,8 +13,6 @@ set -g status-keys "emacs"
 
 set -g detach-on-destroy off
 
-set -g focus-events on
-
 ###########################
 #  Key Bindings
 ###########################
@@ -43,7 +41,6 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind H resize-pane -L 10
 bind J resize-pane -D 10
@@ -68,11 +65,11 @@ set -g status-right '#S - %Y.%m.%d %H:%M'
 set -g status-bg black
 set -g status-fg white
 
-# set-window-option -g window-status-current-fg black
-# set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-style fg=white
+set-window-option -g window-status-style fg=white
 
-# set -g pane-border-fg white
-# set -g pane-border-bg white
-# set -g pane-active-border-fg white
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=black
+
 set -g message-fg black
 set -g message-bg white
