--- a/config/lxqt/lxqt.conf
+++ b/config/lxqt/lxqt.conf
@@ -1,9 +1,9 @@
 [General]
-__theme_updated__=1461855433819
+__theme_updated__=1463842809170
 __userfile__=true
 icon_theme=Adwaita
 single_click_activate=false
-theme=kde-plasma
+theme=dark
 
 [Qt]
 style=Fusion
