vim: tmux: enable mouse

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,8 @@ set -g status-keys "emacs"
 
 set -g detach-on-destroy off
 
+set -g mouse
+
 ###########################
 #  Key Bindings
 ###########################
