bin: put directory in a more standard place

--- a/config/lxqt/globalkeyshortcuts.conf
+++ b/config/lxqt/globalkeyshortcuts.conf
@@ -124,7 +124,7 @@ path=/runner/show_hide_dialog
 [Print.24]
 Comment=Screenshot
 Enabled=true
-Exec=/home/ferran/bin/scrot
+Exec=/home/ferran/.local/bin/scrot
 
 [XF86AudioLowerVolume.25]
 Comment=Decrease sound volume
