change st -> xterm and firefox -> opera

--- a/config/lxqt/globalkeyshortcuts.conf
+++ b/config/lxqt/globalkeyshortcuts.conf
@@ -59,7 +59,7 @@ path=/panel/mainmenu/show_hide
 [Alt%2BReturn.11]
 Comment=Open a terminal
 Enabled=true
-Exec=st, -g, 600x600, -e, tmux
+Exec=xterm, -maximized, -e, tmux
 
 [Control%2BAlt%2BD.12]
 Comment=Show desktop
