--- a/config/lxqt/session.conf
+++ b/config/lxqt/session.conf
@@ -4,9 +4,9 @@ leave_confirmation=true
 window_manager=openbox
 
 [Environment]
-BROWSER=firefox
+BROWSER=opera
 GTK_CSD=0
-TERM=st
+TERM=xterm
 
 [Font]
 antialias=true
