--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows off
 
-set -g status-keys "emacs"
+set -g status-keys "vi"
 
 set -g detach-on-destroy off
 
@@ -67,6 +67,7 @@ set -g status-right '#S - %Y.%m.%d %H:%M'
 set -g status-bg black
 set -g status-fg white
 
+set-window-option -g window-status-current-format '[#I:#W #F]'
 set-window-option -g window-status-current-style fg=white
 set-window-option -g window-status-style fg=white
 
