tmux: add mouse support for copying

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,7 @@ set -g prefix C-g
 
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy enter copy-pipe 'xclip -selection clipboard >/dev/null'
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe 'xclip -in -selection clipboard >/dev/null'
 
 bind C-p paste-buffer
 
