--- a/config/lxqt/globalkeyshortcuts.conf
+++ b/config/lxqt/globalkeyshortcuts.conf
@@ -59,7 +59,7 @@ path=/panel/mainmenu/show_hide
 [Alt%2BReturn.11]
 Comment=Open a terminal
 Enabled=true
-Exec=xterm, -maximized, -e, tmux
+Exec=xterm, -g, 125x50, -e, tmux
 
 [Control%2BAlt%2BD.12]
 Comment=Show desktop
@@ -78,75 +78,60 @@ path=/panel/desktopswitch/desktop_12
 
 [Control%2BF9.15]
 Comment=Switch to desktop 9
-Enabled=true
+Enabled=false
 path=/panel/desktopswitch/desktop_9
 
-[Meta%2BC.16]
-Comment=Layout custom
-Enabled=true
-Exec=/home/ferran/bin/keyboard.sh
-
-[Meta%2BF.17]
+[Meta%2BF.16]
 Comment=PCManFM
 Enabled=true
 Exec=pcmanfm-qt
 
-[Meta%2BP.18]
+[Meta%2BP.17]
 Comment=Spotify play/pause
 Enabled=true
 Exec=dbus-send, --print-reply, "--dest=org.mpris.MediaPlayer2.spotify", /org/mpris/MediaPlayer2, org.mpris.MediaPlayer2.Player.PlayPause
 
-[Meta%2BS.19]
-Comment=Layout spanish
-Enabled=true
-Exec=setxkbmap, es
-
-[Meta%2BU.20]
-Comment=Layout us
-Enabled=true
-Exec=setxkbmap, us
-
-[Meta%2Bcomma.21]
+[Meta%2Bcomma.18]
 Comment=Spotify previous
 Enabled=true
 Exec=dbus-send, --print-reply, "--dest=org.mpris.MediaPlayer2.spotify", /org/mpris/MediaPlayer2, org.mpris.MediaPlayer2.Player.Previous
 
-[Meta%2Bperiod.22]
+[Meta%2Bperiod.19]
 Comment=Spotify next
 Enabled=true
 Exec=dbus-send, --print-reply, "--dest=org.mpris.MediaPlayer2.spotify", /org/mpris/MediaPlayer2, org.mpris.MediaPlayer2.Player.Next
 
-[Meta%2Bspace.23]
+[Meta%2Bspace.20]
 Comment=Show/hide runner dialog
 Enabled=true
 path=/runner/show_hide_dialog
 
-[Print.24]
+[Print.21]
 Comment=Screenshot
 Enabled=true
-Exec=/home/ferran/.local/bin/scrot
+Exec=$HOME/.local/bin/scrot
 
-[XF86AudioLowerVolume.25]
+[XF86AudioLowerVolume.22]
 Comment=Decrease sound volume
 Enabled=true
 path=/panel/volume/down
 
-[XF86AudioMute.26]
+[XF86AudioMute.23]
 Comment=Mute/unmute sound volume
 Enabled=true
 path=/panel/volume/mute
 
-[XF86AudioRaiseVolume.27]
+[XF86AudioRaiseVolume.24]
 Comment=Increase sound volume
 Enabled=true
 path=/panel/volume/up
 
-[XF86MonBrightnessDown.28]
+[XF86MonBrightnessDown.25]
 Comment=Decrease brightness
 Enabled=true
 Exec=xbacklight, -dec, 10
 
-[XF86MonBrightnessUp.29]
+[XF86MonBrightnessUp.26]
 Comment=Increase brightness
 Enabled=true
 Exec=xbacklight, -inc, 10
