--- a/config/lxqt/panel.conf
+++ b/config/lxqt/panel.conf
@@ -26,6 +26,7 @@ type=mount
 
 [panel1]
 alignment=0
+animation-duration=0
 background-color=@Variant(\0\0\0\x43\0\xff\xff\0\0\0\0\0\0\0\0)
 background-image=
 desktop=0
@@ -33,6 +34,7 @@ font-color=@Variant(\0\0\0\x43\0\xff\xff\0\0\0\0\0\0\0\0)
 hidable=true
 iconSize=24
 lineCount=1
+lockPanel=false
 opacity=100
 panelSize=36
 plugins=mainmenu, taskbar, desktopswitch, tray, statusnotifier, mount, volume, clock, showdesktop
