lxqt: since when was that there?

--- a/config/lxqt/panel.conf
+++ b/config/lxqt/panel.conf
@@ -37,14 +37,10 @@ lineCount=1
 lockPanel=false
 opacity=100
 panelSize=36
-plugins=mainmenu, taskbar, desktopswitch, tray, statusnotifier, mount, volume, clock, showdesktop
+plugins=mainmenu, taskbar, desktopswitch, tray, statusnotifier, mount, volume, clock
 position=Bottom
 width=100
 width-percent=true
-
-[showdesktop]
-alignment=Left
-type=showdesktop
 
 [statusnotifier]
 alignment=Left
