--- a/config/autostart/redshift.desktop
+++ b/config/autostart/redshift.desktop
@@ -14,7 +14,7 @@ Comment[pl]=Narzędzie do dostosowywania temperatury barwowej
 Comment[ru]=Инструмент регулирования цветовой температуры
 Comment[tr]=Renk sıcaklığı ayarlama aracı
 Comment[zh_CN]=色温调节工具
-Exec=redshift-gtk
+Exec=redshift
 GenericName=Color temperature adjustment
 GenericName[cs]=Přizpůsobení barevné teploty
 GenericName[da]=Justering af farvetemperatur
