--- a/config/lxqt/panel.conf
+++ b/config/lxqt/panel.conf
@@ -47,8 +47,68 @@ alignment=Left
 type=statusnotifier
 
 [taskbar]
+__userfile__=true
 alignment=Left
+autoRotate=true
+buttonHeight=100
+buttonStyle=Icon
+buttonWidth=50
+clock\UTC=false
+clock\alignment=Right
+clock\autoRotate=true
+clock\customDateFormat=
+clock\dateFormat=M/d/yy
+clock\firstDayOfWeek=1
+clock\showDate=no
+clock\timeFormat=HH:mm
+clock\type=clock
+closeOnMiddleClick=true
+desktopswitch\alignment=Left
+desktopswitch\type=desktopswitch
+groupingEnabled=false
+iconByClass=true
+mainmenu\alignment=Left
+mainmenu\type=mainmenu
+mount\alignment=Right
+mount\type=mount
+panel1\alignment=0
+panel1\animation-duration=0
+panel1\background-color=@Variant(\0\0\0\x43\0\xff\xff\0\0\0\0\0\0\0\0)
+panel1\background-image=
+panel1\desktop=0
+panel1\font-color=@Variant(\0\0\0\x43\0\xff\xff\0\0\0\0\0\0\0\0)
+panel1\hidable=true
+panel1\iconSize=24
+panel1\lineCount=1
+panel1\lockPanel=false
+panel1\opacity=100
+panel1\panelSize=36
+panel1\plugins=mainmenu, taskbar, desktopswitch, tray, statusnotifier, mount, volume, clock
+panel1\position=Bottom
+panel1\width=100
+panel1\width-percent=true
+panels=panel1
+quicklaunch\alignment=Left
+quicklaunch\type=quicklaunch
+raiseOnCurrentDesktop=false
+showDesktopNum=0
+showGroupOnHover=false
+showOnlyCurrentScreenTasks=false
+showOnlyMinimizedTasks=false
+showOnlyOneDesktopTasks=false
+showdesktop\alignment=Right
+showdesktop\type=showdesktop
+statusnotifier\alignment=Left
+statusnotifier\type=statusnotifier
+taskbar\alignment=Left
+taskbar\type=taskbar
+tray\alignment=Right
+tray\type=tray
 type=taskbar
+volume\alignment=Right
+volume\audioEngine=PulseAudio
+volume\device=1
+volume\type=volume
 
 [tray]
 alignment=Right
